update files, readme

--- a/aws_amazon_reviews_etl.ipynb
+++ b/aws_amazon_reviews_etl.ipynb
@@ -117,7 +117,7 @@
         "spark = SparkSession.builder.appName(\"AWS-Amazon-Reviews\").config(\"spark.driver.extraClassPath\",\"/content/postgresql-42.2.16.jar\").getOrCreate()\n",
         "\n",
         "# Get files\n",
-        "url = \"https://s3.amazonaws.com/amazon-reviews-pds/tsv/amazon_reviews_us_Digital_Video_Games_v1_00.tsv.gz\"\n",
+        "url = \"https://s3://amazongamereview/amazon_reviews_us_Digital_Video_Games_v1_00.tsv.gz\"\n",
         "spark.sparkContext.addFile(url)\n",
         "df = spark.read.csv(SparkFiles.get(\"amazon_reviews_us_Digital_Video_Games_v1_00.tsv.gz\"), sep=\"\\t\", header=True, inferSchema=True)\n",
         "df.show()"
@@ -434,11 +434,12 @@
       },
       "outputs": [],
       "source": [
+        "from config import aws_db_conn, aws_username, aws_password\n",
         "# Configure settings for RDS\n",
         "mode = \"append\"\n",
-        "jdbc_url=\"jdbc:postgresql://psqlamazonproducts.cvosow8lte5v.us-west-1.rds.amazonaws.com:5432/amazonproducts\"\n",
-        "config = {\"user\":\"postgres\", \n",
-        "          \"password\": \"postgres\", \n",
+        "jdbc_url=\"aws_db_conn\"\n",
+        "config = {\"user\":\"aws_username\", \n",
+        "          \"password\": \"aws_password\", \n",
         "          \"driver\":\"org.postgresql.Driver\"}"
       ]
     },
