--- a/spark_aws_amazon_review_analysis.ipynb
+++ b/spark_aws_amazon_review_analysis.ipynb
@@ -1,20 +1,4 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "name": "spark_aws_amazon_reviews.ipynb",
-      "provenance": [],
-      "collapsed_sections": []
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "language_info": {
-      "name": "python"
-    }
-  },
   "cells": [
     {
       "cell_type": "code",
@@ -28,8 +12,8 @@
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Get:1 https://cloud.r-project.org/bin/linux/ubuntu bionic-cran40/ InRelease [3,626 B]\n",
             "Get:2 http://security.ubuntu.com/ubuntu bionic-security InRelease [88.7 kB]\n",
@@ -78,21 +62,15 @@
         "\n",
         "from pyspark.sql import SparkSession\n",
         "from pyspark import SparkFiles\n",
-        "from pyspark.sql.functions import to_date\n"
+        "from pyspark.sql.functions import to_date\n",
+        "\n",
+        "# JDBC\n",
+        "!wget https://jdbc.postgresql.org/download/postgresql-42.2.16.jar\n"
       ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "# Spark\n",
-        "spark = SparkSession.builder.appName(\"AWS-Amazon-Reviews\").config(\"spark.driver.extraClassPath\",\"/content/postgresql-42.2.16.jar\").getOrCreate()\n",
-        "\n",
-        "# Get files\n",
-        "url = \"https://s3.amazonaws.com/amazon-reviews-pds/tsv/amazon_reviews_us_Electronics_v1_00.tsv.gz\"\n",
-        "spark.sparkContext.addFile(url)\n",
-        "df = spark.read.csv(SparkFiles.get(\"amazon_reviews_us_Electronics_v1_00.tsv.gz\"), sep=\"\\t\", header=True, inferSchema=True)\n",
-        "df.show()"
-      ],
+      "execution_count": 13,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -100,11 +78,10 @@
         "id": "d44KtVMrtsN2",
         "outputId": "dca50b6e-131c-4309-cc20-6a36816e42e9"
       },
-      "execution_count": 13,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "+-----------+-----------+--------------+----------+--------------+--------------------+----------------+-----------+-------------+-----------+----+-----------------+--------------------+--------------------+-----------+\n",
             "|marketplace|customer_id|     review_id|product_id|product_parent|       product_title|product_category|star_rating|helpful_votes|total_votes|vine|verified_purchase|     review_headline|         review_body|review_date|\n",
@@ -134,19 +111,21 @@
             "\n"
           ]
         }
+      ],
+      "source": [
+        "# Spark\n",
+        "spark = SparkSession.builder.appName(\"AWS-Amazon-Reviews\").config(\"spark.driver.extraClassPath\",\"/content/postgresql-42.2.16.jar\").getOrCreate()\n",
+        "\n",
+        "# Get files\n",
+        "url = \"https://s3://amazongamereview/amazon_reviews_us_Digital_Video_Games_v1_00.tsv.gz\"\n",
+        "spark.sparkContext.addFile(url)\n",
+        "df = spark.read.csv(SparkFiles.get(\"amazon_reviews_us_Digital_Video_Games_v1_00.tsv.gz\"), sep=\"\\t\", header=True, inferSchema=True)\n",
+        "df.show()"
       ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "# Setting up the dataframe\n",
-        "vine_df = df.select([\"star_rating\", \"helpful_votes\", \"total_votes\", \"vine\", \"verified_purchase\"])\n",
-        "vine_df.show(10)\n",
-        "\n",
-        "# Finding totals and helpful totals\n",
-        "vine_total_votes = vine_df.filter(vine_df[\"total_votes\"] >= 20)\n",
-        "vine_helpful = vine_total_votes.filter(vine_total_votes[\"helpful_votes\"]/vine_total_votes[\"total_votes\"] >= 0.5)"
-      ],
+      "execution_count": 14,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -154,11 +133,10 @@
         "id": "fm3G0GPRt6Iq",
         "outputId": "a36fb5a7-b55d-449c-85f7-ec433b132591"
       },
-      "execution_count": 14,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "+-----------+-------------+-----------+----+-----------------+\n",
             "|star_rating|helpful_votes|total_votes|vine|verified_purchase|\n",
@@ -178,18 +156,20 @@
             "\n"
           ]
         }
+      ],
+      "source": [
+        "# Setting up the dataframe\n",
+        "vine_df = df.select([\"star_rating\", \"helpful_votes\", \"total_votes\", \"vine\", \"verified_purchase\"])\n",
+        "vine_df.show(10)\n",
+        "\n",
+        "# Finding totals and helpful totals\n",
+        "vine_total_votes = vine_df.filter(vine_df[\"total_votes\"] >= 20)\n",
+        "vine_helpful = vine_total_votes.filter(vine_total_votes[\"helpful_votes\"]/vine_total_votes[\"total_votes\"] >= 0.5)"
       ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "# Filter paid and unpaid\n",
-        "paid_vine = vine_helpful.filter(vine_helpful['vine']== 'Y')\n",
-        "unpaid_vine = vine_helpful.filter(vine_helpful['vine']== 'N')\n",
-        "\n",
-        "paid_vine.describe().show()\n",
-        "unpaid_vine.describe().show()"
-      ],
+      "execution_count": 18,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -197,11 +177,10 @@
         "id": "9hfNpI30uDtu",
         "outputId": "c2ffcf33-02b3-4d14-98ac-8788650eae94"
       },
-      "execution_count": 18,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "+-------+------------------+------------------+-----------------+----+-----------------+\n",
             "|summary|       star_rating|     helpful_votes|      total_votes|vine|verified_purchase|\n",
@@ -225,10 +204,37 @@
             "\n"
           ]
         }
+      ],
+      "source": [
+        "# Filter paid and unpaid\n",
+        "paid_vine = vine_helpful.filter(vine_helpful['vine']== 'Y')\n",
+        "unpaid_vine = vine_helpful.filter(vine_helpful['vine']== 'N')\n",
+        "\n",
+        "paid_vine.describe().show()\n",
+        "unpaid_vine.describe().show()"
       ]
     },
     {
       "cell_type": "code",
+      "execution_count": 16,
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "KBYhosXnub2P",
+        "outputId": "43794fe4-a31d-42a0-d1f0-edbd5bc1c9b7"
+      },
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "1080\n",
+            "454\n",
+            "0.4203703703703704\n"
+          ]
+        }
+      ],
       "source": [
         "# Analyzing paid vine\n",
         "paid_five_star = paid_vine[paid_vine['star_rating']== 5].count()\n",
@@ -237,29 +243,29 @@
         "print(paid_count)\n",
         "print(paid_five_star)\n",
         "print(five_star_vine)"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "KBYhosXnub2P",
-        "outputId": "43794fe4-a31d-42a0-d1f0-edbd5bc1c9b7"
-      },
-      "execution_count": 16,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "1080\n",
-            "454\n",
-            "0.4203703703703704\n"
-          ]
-        }
       ]
     },
     {
       "cell_type": "code",
+      "execution_count": 17,
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "t44dZ1tgverw",
+        "outputId": "1facb267-d950-4df7-aa60-341b54178012"
+      },
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "49673\n",
+            "23043\n",
+            "0.463893865882874\n"
+          ]
+        }
+      ],
       "source": [
         "# Analyzing unpaid vine\n",
         "unpaid_five_star = unpaid_vine[unpaid_vine['star_rating']== 5].count()\n",
@@ -268,37 +274,39 @@
         "print(unpaid_count)\n",
         "print(unpaid_five_star)\n",
         "print(float(unpaid_five_star) / float(unpaid_count))"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "t44dZ1tgverw",
-        "outputId": "1facb267-d950-4df7-aa60-341b54178012"
-      },
-      "execution_count": 17,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "49673\n",
-            "23043\n",
-            "0.463893865882874\n"
-          ]
-        }
       ]
     },
     {
       "cell_type": "code",
-      "source": [
-        ""
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "WPjmd59FzeT5"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": []
     }
-  ]
+  ],
+  "metadata": {
+    "colab": {
+      "collapsed_sections": [],
+      "name": "spark_aws_amazon_reviews.ipynb",
+      "provenance": []
+    },
+    "kernelspec": {
+      "display_name": "Python 3.8.13 ('base')",
+      "language": "python",
+      "name": "python3"
+    },
+    "language_info": {
+      "name": "python",
+      "version": "3.8.13"
+    },
+    "vscode": {
+      "interpreter": {
+        "hash": "65a8de41a5ee1eeefd8cde7b1d120363c7d2ff8e30a40d43c0887b207b60c148"
+      }
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
